--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <title>Casino Tracker</title>
-<link rel="manifest" href="manifest.json?v=1.0.2">
+<link rel="manifest" href="manifest.json?v=1.0.3">
 <meta name="theme-color" content="#0ea5e9">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -63,7 +63,7 @@ th{color:var(--muted);font-weight:600}
   <div id="updateBanner" class="update-banner">
     <div class="row">
       <div>New version available.</div>
-      <div class="row"><button id="refreshBtn" class="small">Refresh</button><span class="chip">v1.0.2</span></div>
+      <div class="row"><button id="refreshBtn" class="small">Refresh</button><span class="chip">v1.0.3</span></div>
     </div>
   </div>
 
@@ -178,8 +178,8 @@ th{color:var(--muted);font-weight:600}
 
 <script>
 (function(){
-  const VERSION = "1.0.2";
-  const KEY = 'ct:sessions:v3'; // bumped schema for minutes + machine
+  const VERSION = "1.0.3";
+  const KEY = 'ct:sessions:v3';
   const BKP_KEY = 'ct:undo';
 
   let rows = load();
@@ -203,7 +203,6 @@ th{color:var(--muted);font-weight:600}
     refreshBtn: document.getElementById('refreshBtn'),
   };
 
-  // SW update banner
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('./service-worker.js?v='+VERSION);
     navigator.serviceWorker.addEventListener('controllerchange', () => window.location.reload());
@@ -218,7 +217,7 @@ th{color:var(--muted);font-weight:600}
   function load(){ try{ const raw=localStorage.getItem(KEY); return raw? JSON.parse(raw) : []; }catch{ return []; } }
   function snapshot(){ lastSnapshot = JSON.stringify(rows); localStorage.setItem(BKP_KEY, lastSnapshot); }
   function rollback(){ try{ const snap = localStorage.getItem(BKP_KEY); if(!snap) return false; rows = JSON.parse(snap)||[]; save(); return true; }catch{ return false; } }
-  function escapeHtml(s){ return String(s||'').replace(/[&<>"']/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
+  function escapeHtml(s){ return String(s||'').replace(/[&<>"']/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[c])); }
 
   function calc(list){
     const t = list.reduce((a,r)=>{ const net = r.cashOut - r.buyIn; a.sessions++; a.net += net; a.minutes += (r.minutes||0); return a; }, {sessions:0, net:0, minutes:0});
@@ -256,18 +255,18 @@ th{color:var(--muted);font-weight:600}
       const net = (r.cashOut - r.buyIn);
       const tr = document.createElement('tr');
       tr.innerHTML = `
-        <td>{r.date || ''}</td>
-        <td>{escapeHtml(r.location)}</td>
-        <td>{escapeHtml(r.game)}</td>
-        <td>{escapeHtml(r.machine)}</td>
-        <td class="right">{r.minutes||0}</td>
-        <td class="right">{fmtCur(r.buyIn||0)}</td>
-        <td class="right">{fmtCur(r.cashOut||0)}</td>
-        <td class="right ${net>0?'net-pos': net<0?'net-neg':''}">{fmtCur(net)}</td>
-        <td class="truncate" title="{escapeHtml(r.notes||'')}">{escapeHtml(r.notes||'')}</td>
+        <td>${r.date || ''}</td>
+        <td>${escapeHtml(r.location)}</td>
+        <td>${escapeHtml(r.game)}</td>
+        <td>${escapeHtml(r.machine)}</td>
+        <td class="right">${r.minutes||0}</td>
+        <td class="right">${fmtCur(r.buyIn||0)}</td>
+        <td class="right">${fmtCur(r.cashOut||0)}</td>
+        <td class="right ${net>0?'net-pos': net<0?'net-neg':''}">${fmtCur(net)}</td>
+        <td class="truncate" title="${escapeHtml(r.notes||'')}">${escapeHtml(r.notes||'')}</td>
         <td class="nowrap">
-          <button class="small" data-act="edit" data-id="{r.id}">Edit</button>
-          <button class="small" data-act="del" data-id="{r.id}">Delete</button>
+          <button class="small" data-act="edit" data-id="${r.id}">Edit</button>
+          <button class="small" data-act="del" data-id="${r.id}">Delete</button>
         </td>`;
       el.tbody.appendChild(tr);
     }
@@ -331,7 +330,6 @@ th{color:var(--muted);font-weight:600}
     clearErrors();
   }
 
-  // Submit & actions
   el.form.addEventListener('submit', (ev)=>{
     ev.preventDefault();
     if(!validate()) return;
@@ -355,14 +353,11 @@ th{color:var(--muted);font-weight:600}
     }
   });
 
-  // Filters
   for(const id of ['fDateFrom','fDateTo','fGame','fResult']) document.getElementById(id).addEventListener('input', render);
   el.clearFiltersBtn.addEventListener('click', ()=>{ el.fDateFrom.value=''; el.fDateTo.value=''; el.fGame.value=''; el.fResult.value=''; render(); });
 
-  // Undo
   el.undoBtn.addEventListener('click', ()=>{ if(rollback()){ render(); } });
 
-  // Quick Add buttons
   document.querySelector('.sticky-bar').addEventListener('click', (e)=>{
     const b = e.target.closest('button'); if(!b) return;
     if(b.id==='quickSaveBtn'){
@@ -374,7 +369,6 @@ th{color:var(--muted);font-weight:600}
     updateLive();
   });
 
-  // Export / Import
   el.exportCsvBtn.addEventListener('click', ()=>{
     const header=['date','location','game','machine','minutes','buyIn','cashOut','net','notes'];
     const out = rows.map(r=>[r.date,r.location,r.game,r.machine,(r.minutes||0),(r.buyIn||0),(r.cashOut||0),(r.cashOut-r.buyIn),(r.notes||'').replace(/\n/g,' ')]);
@@ -409,7 +403,6 @@ th{color:var(--muted);font-weight:600}
 
   function download(name, text){const blob=new Blob([text],{type:'text/plain;charset=utf-8'});const url=URL.createObjectURL(blob);const a=document.createElement('a');a.href=url;a.download=name;a.click();URL.revokeObjectURL(url);}
 
-  // Initial
   render(); updateLive();
 })();
 </script>
